Distancias entre los platos

--- a/Food.ipynb
+++ b/Food.ipynb
@@ -11,9 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 322,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -21,12 +21,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import KMeans"
+    "import scipy.spatial.distance as dist\n",
+    "from sklearn.cluster import KMeans\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 312,
    "metadata": {
     "collapsed": false
    },
@@ -380,41 +381,240 @@
    "source": [
     "### Como se parecen?\n",
     "\n",
-    "Distancia entre los platos se basa en numero de ingredientes compartidos"
+    "Para calcular la 'pareciencia' entre los platos de momento solo utilizo los ingredientes que le componen. Hacemos la distancia de *yule* que definimos de tal manera:\n",
+    "\n",
+    "Sea $v$ vector binario que nos dice si un plato lleva un ingrediente o no. La intuicion:\n",
+    "- Decimos que los dos platos son iguales si llevan los mismos ingredientes. \n",
+    "- Decimos que los platos se parecen si los ingredientes que llevan coinciden bastante. \n",
+    "- Decimos que los platos son muy distintos si comparten muy pocos ingredientes. \n",
+    "\n",
+    "La distancia entre plato $i$ e $j$ definimos formalmente como:\n",
+    "\n",
+    "$$ \n",
+    "distancia_{i,j} = 1 - \\lVert  \\frac{2(\\text{numero_de_ingredientes_que_no_comparten})}{\\text{numero_total_de_ingredientes}} \\rVert  = 1 - \\lVert yule.distance_{i,j} \\rVert \n",
+    "$$\n",
+    "\n",
+    "Lo que en codigo seria algo que usa paquete *spatial* de la libreria *scipy*\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 350,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def distance(word) : \n",
-    "    l = df[df[word]==1].sum()\n",
-    "    return round(l / l.max(),2)\n"
+    "Y = dist.squareform(dist.pdist(np.matrix(df), 'yule'))\n",
+    "dish_similarity = pd.DataFrame((1 - Y / Y.max()).round(2), index=names, columns=names)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esto para luego..."
+    "Lo que nos va generar una matriz como esta:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 354,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>plato combinado 1</th>\n",
+       "      <th>plato combinado 2</th>\n",
+       "      <th>plato combinado 3</th>\n",
+       "      <th>plato combinado 4</th>\n",
+       "      <th>plato combinado 5</th>\n",
+       "      <th>plato combinado 6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 1</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 2</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 3</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 4</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 5</th>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plato combinado 6</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   plato combinado 1  plato combinado 2  plato combinado 3  \\\n",
+       "plato combinado 1               1.00               0.89               0.89   \n",
+       "plato combinado 2               0.89               1.00               0.96   \n",
+       "plato combinado 3               0.89               0.96               1.00   \n",
+       "plato combinado 4               0.89               0.96               0.96   \n",
+       "plato combinado 5               0.24               0.46               0.11   \n",
+       "plato combinado 6               0.09               0.24               0.00   \n",
+       "\n",
+       "                   plato combinado 4  plato combinado 5  plato combinado 6  \n",
+       "plato combinado 1               0.89               0.24               0.09  \n",
+       "plato combinado 2               0.96               0.46               0.24  \n",
+       "plato combinado 3               0.96               0.11               0.00  \n",
+       "plato combinado 4               1.00               0.46               0.24  \n",
+       "plato combinado 5               0.46               1.00               0.88  \n",
+       "plato combinado 6               0.24               0.88               1.00  "
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#distance_matrix = pd.DataFrame([distance(word) for word in words], index=words)\n",
-    "#plt.pcolor(distance_matrix, cmap=plt.cm.Reds)\n",
-    "#plt.show()\n"
+    "dish_similarity"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Asi que podemos dibujar el heatmap y ver que efectivamente los platos 1-4 se parecen mucho, y los 5-6 dos se parecen mas entere ellos per un poco menos. \n",
+    "\n",
+    "Lo bueno que esto es coherente con con el algoritmo de *K-means* y nuestra intuicion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADBZJREFUeJzt3G+oXwUdx/HPx3uvqdtUUhNzxpTECEOnN6MWUYtypqwe\n+CBJH0hxn2RMKiqDCB8FPYiCIrqoZbSSmA7ESjFSTMqpV1fqtsJEcFJMjdom+G/79OCeYsm993dm\n5+zc76/3C8bu3c7uPj/G3pyd3zlzEgEA6jhq6AEAgMNDuAGgGMINAMUQbgAohnADQDGEGwCKaRVu\n2yfa3mJ7l+2dtt/b9zAAwMImWx73HUl3Jrnc9tGSjutxEwBgCR71AI7tEyRtl3RWeFoHAAbX5oz7\nTEnPSfqh7fMkzUnalOTFQw+yPSNpRpJWHHfche94+1ldb10eXnpx9DGVrThh6AX9efGfQy/o1QtP\nPjP0hF7tP3hw6Am9el4Hn09ySptj25xxT0t6QNK6JNtsf0fS3iRfW+zXTJ/3rjx0522Hs7mMg7se\nGnpCrybec+nQE3pzYNsvhp7Qq82fuHboCb363d6Xhp7Qqx9o31yS6TbHtnlzcrek3Um2NZ9vkXTB\nGx0HAPjfjAx3kr9Jesb2Oc0PfVjSjl5XAQAW1fauks9J2tzcUfKUpKv7mwQAWEqrcCfZLqnVtRcA\nQL94chIAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4\nAaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHc\nAFAM4QaAYibbHGT7aUn7JB2Q9FqS6T5HAQAW1yrcjQ8leb63JQCAVrhUAgDFtA13JP3a9pztmT4H\nAQCW1vZSyfuTPGv7LZLutr0ryX2HHtAEfUaS3nbqyTq466GOpy4Puev2oSf0KmevHXpCb8b9z+53\ne18aekKv3nf8MUNP6NUP9u5rfWyrM+4kzzbf75G0VdJFCxwzm2Q6yfQpJ6xqPQAAcHhGhtv2Ctur\n/v2xpI9KerzvYQCAhbW5VHKqpK22/338T5Pc2esqAMCiRoY7yVOSzjsCWwAALXA7IAAUQ7gBoBjC\nDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzh\nBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKKZ1\nuG1P2H7U9h19DgIALO1wzrg3SdrZ1xAAQDutwm17taRLJd3Q7xwAwChOMvoge4ukb0haJemLSS5b\n4JgZSTOSdJKPuvCbK9/c8dTl4S8vvTb0BLxBL7x6YOgJvfrulz829IRe+eKNQ0/o1eT6T80lmW5z\n7MgzbtuXSdqTZG6p45LMJplOMr3SvOcJAH1pU9h1kjbaflrSLZLW2/5Jr6sAAIsaGe4k1yVZnWSN\npE9K+k2SK3tfBgBYENc0AKCYycM5OMm9ku7tZQkAoBXOuAGgGMINAMUQbgAohnADQDGEGwCKIdwA\nUAzhBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4A\nKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAoZmS4bR9j+0Hbf7D9hO3rj8QwAMDC\nJlsc87Kk9Un2256SdL/tXyV5oOdtAIAFjAx3kkja33w61XxLn6MAAItrdY3b9oTt7ZL2SLo7ybYF\njpmx/bDth/fnYNc7AQCNNpdKlOSApPNtnyhpq+1zkzz+umNmJc1K0pqJKc7Ii3rh1QNDT+jNSVMT\nQ0/o1cQ1Xx96Qq/85rcOPWHZOKy7SpL8Q9I9kjb0MwcAMEqbu0pOac60ZftYSR+RtKvvYQCAhbW5\nVHKapJttT2g+9D9Pcke/swAAi2lzV8kfJa09AlsAAC3w5CQAFEO4AaAYwg0AxRBuACiGcANAMYQb\nAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMIN\nAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0AxYwMt+0zbN9je4ftJ2xvOhLDAAAL\nm2xxzGuSvpDkEdurJM3ZvjvJjp63AQAWMPKMO8lfkzzSfLxP0k5Jp/c9DACwsDZn3P9he42ktZK2\nLfBzM5JmJOkkc+kcAPrSOty2V0q6VdK1Sfa+/ueTzEqalaQ1E1PpbOEy88KrB4ae0KuTpiaGnoA3\n6MB3rx96Qq988cahJywbrU6NbU9pPtqbk9zW7yQAwFLa3FViSTdK2pnkW/1PAgAspc0Z9zpJV0la\nb3t78+1jPe8CACxi5DXuJPdL8hHYAgBogds/AKAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGII\nNwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGE\nGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0AxRBuAChmZLht32R7j+3Hj8QgAMDS2pxx/0jShp53AABa\nGhnuJPdJ+vsR2AIAaIFr3ABQzGRXX8j2jKQZSVop68F9L3f1pZeVi1a9aegJwIJ88cahJ/TqqHe8\ne+gJy0ZnZ9xJZpNMJ5k+Ru7qywIAXodLJQBQTJvbAX8m6feSzrG92/an+58FAFjMyGvcSa44EkMA\nAO1wqQQAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4\nAaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHc\nAFAM4QaAYgg3ABTTKty2N9j+k+0nbX+l71EAgMWNDLftCUnfk3SJpHdKusL2O/seBgBYWJsz7osk\nPZnkqSSvSLpF0sf7nQUAWIyTLH2AfbmkDUk+03x+laT3JLnmdcfNSJppPj1X0uPdz10WTpb0/NAj\nesTrq43XV9c5SVa1OXCyq98xyaykWUmy/XCS6a6+9nIyzq9N4vVVx+ury/bDbY9tc6nkWUlnHPL5\n6ubHAAADaBPuhySdbftM20dL+qSk2/udBQBYzMhLJUles32NpLskTUi6KckTI37ZbBfjlqlxfm0S\nr686Xl9drV/byDcnAQDLC09OAkAxhBsAiuk03OP8aLztm2zvsT2W96fbPsP2PbZ32H7C9qahN3XJ\n9jG2H7T9h+b1XT/0pq7ZnrD9qO07ht7SNdtP237M9vbDuW2uCtsn2t5ie5ftnbbfu+TxXV3jbh6N\n/7Okj0jarfm7Ua5IsqOT32Bgtj8gab+kHyc5d+g9XbN9mqTTkjxie5WkOUmfGKM/P0takWS/7SlJ\n90valOSBgad1xvbnJU1LOj7JZUPv6ZLtpyVNJxnLh29s3yzpt0luaO7eOy7JPxY7vssz7rF+ND7J\nfZL+PvSOviT5a5JHmo/3Sdop6fRhV3Un8/Y3n04138bmnXnbqyVdKumGobfg8Ng+QdIHJN0oSUle\nWSraUrfhPl3SM4d8vltj9Bf//4ntNZLWSto27JJuNZcStkvaI+nuJOP0+r4t6UuSDg49pCeR9Gvb\nc81/rzFOzpT0nKQfNpe6brC9YqlfwJuT+C+2V0q6VdK1SfYOvadLSQ4kOV/zT/9eZHssLnnZvkzS\nniRzQ2/p0fubP7tLJH22uXQ5LiYlXSDp+0nWSnpR0pLvEXYZbh6NL6659nurpM1Jbht6T1+af4be\nI2nD0Fs6sk7SxuY68C2S1tv+ybCTupXk2eb7PZK2av7S7LjYLWn3If8C3KL5kC+qy3DzaHxhzZt3\nN0rameRbQ+/pmu1TbJ/YfHys5t9E3zXsqm4kuS7J6iRrNP/37jdJrhx4Vmdsr2jeMFdzCeGjGqP/\nfTTJ3yQ9Y/uc5oc+LGnJmwK6/N8B38ij8WXY/pmkD0o62fZuSV9PcuOwqzq1TtJVkh5rrgNL0leT\n/HLATV06TdLNzd1PR0n6eZKxu21uTJ0qaev8uYUmJf00yZ3DTurc5yRtbk56n5J09VIH88g7ABTD\nm5MAUAzhBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMf8CRjnTqtUra3YAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11c7260b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.pcolor(dish_similarity, cmap=plt.cm.Reds)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ideas para luego...\n",
+    "\n",
+    "Hay que preguntarse porque criterios los dos platos se parecen?? Mi idea hasta ahora es:\n",
+    "\n",
+    "1. Tienen el mismo nombre \n",
+    "2. Tienen ingredientes similares\n",
+    "3. El metodo de coccion es el mismo (hervido, frito, al horno, etc.)\n",
+    "\n",
+    "Hay que hacer web scrapping de los webs de recetas para sacar esta infomacion y representarla como vectores binarios. A partir de alli tal como lo tenemos. Para el punto 3 mirate el concepto de dummy variables en estadistica.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yo lo visualizo asi: Desde python hacemos:\n",
+    "\n",
+    "``` \n",
+    "HTTP GET http://donde.sea:9030/dishes/all \n",
+    "\n",
+    "HTTP RESPONSE: JSON \n",
+    "[{\"name\":\"plato combinado 1\", \"ingredientes\": [\"pollo\", \"patata\", \"pimiento\"], \"method\": \"fried\"]}, {...}]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "A partir de aqui lo convertimos en la matriz de ingredientes y seguimos tal como el PoC de arriba."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Otra cosa\n",
+    "\n",
+    "Hay que fitrar fuera los ingredientes mas comunes. Ejemplo: todos los platos llevan sal. Pues el hecho de llevar sal no me aporta informacion addicional asi que lo puedo quitar de mi matriz de ingredientes (al menos a efectos de pareciencia).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mañana monto un PoC como quitarlos..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
