--- a/Food.ipynb
+++ b/Food.ipynb
@@ -1075,7 +1075,8 @@
    "cell_type": "code",
    "execution_count": 445,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1159,6 +1160,15 @@
     "recomendations = pd.DataFrame([dish_similarity.ix[i].sort_values(ascending=False)[0:4].index for i in range(6)], columns = recomender_names)\n",
     "recomendations = recomendations.set_index('Original dish')\n",
     "recomendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ahora me doy cuenta que es un poco caotico. Uno de estos dias lo ordeno y pongo juntos todos los conceptos.\n",
+    "\n",
+    "Bona nit..."
    ]
   },
   {
