Read data from remote son

--- a/Food.ipynb
+++ b/Food.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 447,
    "metadata": {
     "collapsed": false
    },
@@ -22,19 +22,29 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.spatial.distance as dist\n",
-    "from sklearn.cluster import KMeans\n"
+    "\n",
+    "import json\n",
+    "import urllib.request\n",
+    "import itertools\n",
+    "\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 448,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open('data.txt') as f: dishes = f.readlines()\n",
-    "dishes = [dish.replace(\"\\n\", \"\") for dish in dishes]"
+    "url = 'https://raw.githubusercontent.com/rafalszota/Food/master/data.json.txt'\n",
+    "\n",
+    "with urllib.request.urlopen(url) as url:\n",
+    "    dishes = json.loads(url.read().decode())\n"
    ]
   },
   {
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 451,
    "metadata": {
     "collapsed": false
    },
@@ -54,21 +64,21 @@
     {
      "data": {
       "text/plain": [
-       "['plato combinado 1: pollo, patata, pimiento',\n",
-       " 'plato combinado 2: lomo, huevo, patata, pimiento',\n",
-       " 'plato combinado 3: pechugas, huevo, patata, pimiento',\n",
-       " 'plato combinado 4: ternera, huevo, patata, pimiento',\n",
-       " 'plato combinado 5: asado variado, pimiento verde, pimiento rojo, pechuga pollo, ternera, lomo, patata',\n",
-       " 'plato combinado 6: asado completo, pimiento verde, pimiento rojo, pechuga pollo, ternera, lomo, morcilla, txistorra, patata']"
+       "({'cooking': ['frito'],\n",
+       "  'ingredients': ['pollo', 'patata', 'pimiento'],\n",
+       "  'name': 'plato combinado 1'},\n",
+       " {'cooking': ['frito'],\n",
+       "  'ingredients': ['lomo', 'huevo', 'patata', 'pimiento'],\n",
+       "  'name': 'plato combinado 2'})"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dishes"
+    "dishes[0], dishes[1] "
    ]
   },
   {
@@ -82,14 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 452,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "names, ingredients = zip(*[(dish.split(\":\")[0], dish.split(\":\")[1].split(\",\")) for dish in dishes])\n",
-    "unique_ingredients= pd.Series(list(set(x for l in ingredients for x in l)))\n",
+    "names, ingredients = zip(*[(dish['name'], dish['ingredients']) for dish in dishes])\n",
+    "unique_ingredients= pd.Series(list(itertools.chain.from_iterable(ingredients))).unique()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def f(phrase) : return [sum(x) for x in zip(*[w==unique_ingredients for w in phrase])]\n",
